# seadoggo

./: .gitignore  CMakeLists.txt  config_parse.py  conflict_resolve.py  logfuncs.py  main.py  readme.md  serverside_comparison.py  superglobals.py
Client/: CMakeLists.txt  commandreceiver.cpp  commandreceiver.h  main.cpp
Server/: CMakeLists.txt  commandocentral.cpp  commandocentral.h  main.cpp  storagedirectory.cpp  storagedirectory.h
SharedRessources/: CMakeLists.txt  Enumerations.h  FSStorageStructures.h  SDDefinitions.h  SDHelpers.cpp  SDHelpers.h  configuration.cpp  configuration.h  fsentity.h  fsmodel.cpp  fsmodel.h  jsonparser.cpp  jsonparser.h  remotesynchronizationthing.cpp  remotesynchronizationthing.h  user.cpp  user.h  webdavbuilder.cpp  webdavbuilder.h
dependencies/cJSON-1.7.14/: CMakeLists.txt
dependencies/curl-7.74.0/: CMakeLists.txt
dependencies/curl-7.74.0/src/: CMakeLists.txt
dependencies/curl-7.74.0/tests/: CMakeLists.txt
dependencies/curl-7.74.0/tests/libtest/: CMakeLists.txt
dependencies/libmicrohttpd-0.9.72-w32-bin/: readme.txt
original_source/config/: dir.match  structure.conf
original_source/diffs/83ddec0bcc126e769d03e2337ee17761456634eabc7d6ce8ca347d6ef5797992da977129be680cc1176ae0cec21ef50e2c50791acfddb7ac204eb57a1c9cfb50/: Greenstone.json
original_source/log/: backup.list  backup.time
